--- a/TradeHubGui/Views/DashboardView.xaml
+++ b/TradeHubGui/Views/DashboardView.xaml
@@ -15,13 +15,13 @@
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0" >
-            <Grid.RowDefinitions>
+            <!--<Grid.RowDefinitions>
                 <RowDefinition MinHeight="80"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="0.42*" MinHeight="80"/>
-            </Grid.RowDefinitions>
+            </Grid.RowDefinitions>-->
 
-            <Grid Margin="20,20,5,5">
+            <Grid Margin="20,20,5,20">
                 <Border Style="{StaticResource ContentBorderStyle}"/>
                 <DockPanel Margin="10">
                     <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="MARKET DATA" Style="{StaticResource HeaderTextBlockStyle}"/>
@@ -52,7 +52,7 @@
                 </DockPanel>
             </Grid>
             
-            <GridSplitter Grid.Row="1" ResizeDirection="Rows"/>
+            <!--<GridSplitter Grid.Row="1" ResizeDirection="Rows"/>
 
             <Grid Grid.Row="2" Margin="20,5,5,20">
                 <Border Style="{StaticResource ContentBorderStyle}"/>
@@ -81,7 +81,7 @@
                         </ItemsControl>
                     </ScrollViewer>
                 </DockPanel>
-            </Grid>
+            </Grid>-->
         </Grid>
 
         <GridSplitter Grid.Column="1" ResizeDirection="Columns" />
@@ -134,7 +134,7 @@
                         <Grid Grid.Row="1">
                             <Button ToolTip="Order API Configuration" Style="{StaticResource ToolBarButtonStyle}" Content="{StaticResource imgSettings}" 
                                     Width="22" Height="22" HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="1"
-                                    Command="{Binding ShowDataApiConfigurationCommand}"/>
+                                    Command="{Binding ShowOrderApiConfigurationCommand}"/>
                             <HeaderedContentControl Header="ORDER EXECUTION PROVIDER" Margin="0,2,14,0">
                                 <ScrollViewer VerticalScrollBarVisibility="Auto">
                                     <ItemsControl Margin="2">
