--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -37,7 +37,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid Margin="10,10,10,0">
+        <Grid Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="Auto"/>
@@ -52,7 +52,7 @@
             <Border Grid.RowSpan="2" Grid.Column="2" Style="{StaticResource ContentBorderStyle}" Margin="4"/>
 
             <DockPanel>
-                <Button DockPanel.Dock="Right" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20"
+                <Button DockPanel.Dock="Right" Height="24" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20,40" VerticalAlignment="Top"
                         Command="{Binding RunGeneticOptimizationCommand}">
                     <StackPanel Orientation="Horizontal">
                         <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
@@ -73,10 +73,8 @@
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
                         <TextBlock Text="Execution Status" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
-                        <Border Padding="0,0,0,0" Margin="0,0,-9,0" Background="#4FFF" BorderThickness="0,0,9,0" 
-                                                    BorderBrush="{Binding Status, Converter={StaticResource StatusToBrush}}">
-                            <TextBlock Text="{Binding Status, FallbackValue=n/a}"
-                                    FontSize="24" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush0}" HorizontalAlignment="Center"/>
+                        <Border Padding="8,4" Margin="0,4,0,0" Background="{Binding Status, Converter={StaticResource StatusToBrush}}">
+                            <TextBlock Text="{Binding Status, FallbackValue=n/a}" FontSize="14" FontWeight="SemiBold" Foreground="White" HorizontalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                 </StackPanel>
@@ -137,7 +135,7 @@
             <GridSplitter Grid.Column="1" Grid.RowSpan="2" ResizeDirection="Columns"/>
 
 
-            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20" HorizontalAlignment="Right"
+            <Button Grid.Row="0" Grid.Column="2" MinWidth="75" IsEnabled="True" Focusable="False" Margin="20,40" VerticalAlignment="Top" HorizontalAlignment="Right"
                     Command="{Binding ExportGeneticOptimizationCommand}">
                 <StackPanel Orientation="Horizontal">
                     <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}"/>
@@ -165,10 +163,5 @@
                 </DataGrid>
             </HeaderedContentControl>
         </Grid>
-
-
-        <StackPanel Grid.Row="1" Margin="14,8,14,12" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Visibility="Hidden" DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3" Command="{Binding CloseGeneticOptimizationWindowCommand}"/>
-        </StackPanel>
     </Grid>
 </mah:MetroWindow>
