(TH-152) Code changes to makes sure multiple iterations run completely. 'Execute' button enable disable logic added. Export results code added. Strategy name displayed in the window. Working status displayed.

--- a/TradeHubGui/Views/BruteOptimizationWindow.xaml
+++ b/TradeHubGui/Views/BruteOptimizationWindow.xaml
@@ -2,12 +2,14 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                xmlns:conv="clr-namespace:TradeHubGui.Converters"
                 xmlns:views="clr-namespace:TradeHubGui.Views"
+                 xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                 GlowBrush="Silver"
                 ShowInTaskbar="True"
                 WindowStartupLocation="CenterScreen"
                 Title="Brute Optimization"
-                Width="1000"
+                Width="1080"
                 Height="600"
                 MinWidth="500"
                 MinHeight="500"
@@ -18,16 +20,24 @@
             <Image Height="20" Width="20" Source="{StaticResource imgBrute}"/>
         </DataTemplate>
     </mah:MetroWindow.IconTemplate>
-
+    
+    <mah:MetroWindow.Resources>
+        <conv:OptimizationExecutionStatusToBrushConverter x:Key="StatusToBrush"/>
+    </mah:MetroWindow.Resources>
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closing">
+            <i:InvokeCommandAction  Command="{Binding CloseBruteOptimizationWindowCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Grid Margin="10,10,10,0">
+        <Grid Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.7*"/>
+                <ColumnDefinition Width="0.8*"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition />
             </Grid.ColumnDefinitions>
@@ -51,8 +61,14 @@
                 <StackPanel Margin="10" Orientation="Horizontal">
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
                         <TextBlock Text="Strategy" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}, FallbackValue=AA000001}"
+                        <TextBlock Text="{Binding Tag, RelativeSource={RelativeSource AncestorType=mah:MetroWindow}}"
                                    FontSize="24" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush0}" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Orientation="Vertical" Margin="10,4,20,4">
+                        <TextBlock Text="Execution Status" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
+                        <Border Padding="8,4" Margin="0,4,0,0" Background="{Binding BruteForceParameters.Status, Converter={StaticResource StatusToBrush}}">
+                            <TextBlock Text="{Binding BruteForceParameters.Status, FallbackValue=None}" FontSize="14" FontWeight="SemiBold" Foreground="White" HorizontalAlignment="Center"/>
+                        </Border>
                     </StackPanel>
                 </StackPanel>
             </DockPanel>
@@ -92,6 +108,7 @@
 
             <HeaderedContentControl Grid.Row="1" Grid.Column="2" Header="RESULTS" Margin="10,0,10,10">
                 <DataGrid x:Name="ResultDataGrid" 
+                            ItemsSource="{Binding OptimizationStatisticsCollection}"
 							SelectionMode="Single" 
 							IsTextSearchEnabled="True"
 							IsSynchronizedWithCurrentItem="True"
@@ -103,20 +120,15 @@
 							RowHeight="22">
 
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Property info" Width="*" Binding="{Binding Path=PropertyInfo}" />
-                        <DataGridTextColumn Header="Bought" Width="0.7*" Binding="{Binding Path=Bought}" />
-                        <DataGridTextColumn Header="Sold" Width="0.7*" Binding="{Binding Path=Sold}" />
-                        <DataGridTextColumn Header="Avg buy price" Width="*" Binding="{Binding Path=AvgBuyPrice}" />
-                        <DataGridTextColumn Header="Avg sell price" Width="*" Binding="{Binding Path=AvgSellPrice}" />
-                        <DataGridTextColumn Header="Profit" Width="0.7*" Binding="{Binding Path=Profit}" />
+                        <DataGridTextColumn Header="Property info" Width="*" Binding="{Binding Path=Description}" />
+                        <DataGridTextColumn Header="Bought" Width="0.7*" Binding="{Binding Path=ExecutionDetails.BuyCount}" />
+                        <DataGridTextColumn Header="Sold" Width="0.7*" Binding="{Binding Path=ExecutionDetails.SellCount}" />
+                        <DataGridTextColumn Header="Avg buy price" Width="*" Binding="{Binding Path=ExecutionDetails.AvgBuyPrice}" />
+                        <DataGridTextColumn Header="Avg sell price" Width="*" Binding="{Binding Path=ExecutionDetails.AvgSellPrice}" />
+                        <DataGridTextColumn Header="Profit" Width="0.7*" Binding="{Binding Path=ExecutionDetails.Profit}" />
                     </DataGrid.Columns>
                 </DataGrid>
             </HeaderedContentControl>
         </Grid>
-
-
-        <StackPanel Grid.Row="1" Margin="14,8,14,12" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button DockPanel.Dock="Right" Content="Close" MinWidth="70" Margin="3" Command="{Binding CloseBruteOptimizationWindowCommand}"/>
-        </StackPanel>
     </Grid>
 </mah:MetroWindow>
