--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -4,6 +4,7 @@
                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                  xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
                  xmlns:conv="clr-namespace:TradeHubGui.Converters"
+                 xmlns:templateSelectors="clr-namespace:TradeHubGui.TemplateSelectors"
                  xmlns:views="clr-namespace:TradeHubGui.Views"
                  xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                  GlowBrush="Silver"
@@ -16,15 +17,54 @@
                  MinHeight="500"
                  Background="{StaticResource BaseBackground}"
                  Icon="{StaticResource imgGenetic}">
+
     <mah:MetroWindow.IconTemplate>
         <DataTemplate>
             <Image Height="20" Width="20" Source="{StaticResource imgGenetic}"/>
         </DataTemplate>
     </mah:MetroWindow.IconTemplate>
-    
+
     <mah:MetroWindow.Resources>
         <conv:OptimizationExecutionStatusToBrushConverter x:Key="StatusToBrush"/>
+
+        <DataTemplate x:Key="StartValueIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue}" FormatString="N0" Increment="1"/>
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="StartValueUnsignedIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding StartValue}" FormatString="N0" Increment="1" Minimum="0" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="StartValueDecimalTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding StartValue}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EndValueIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EndValueUnsignedIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" Minimum="0" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EndValueDecimalTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
     </mah:MetroWindow.Resources>
+
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Closing">
             <i:InvokeCommandAction  Command="{Binding CloseGeneticOptimizationWindowCommand}" />
@@ -73,9 +113,11 @@
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="10,4,20,4">
                         <TextBlock Text="Execution Status" Margin="0,0,4,0" FontSize="14" FontWeight="SemiBold" Foreground="{StaticResource BaseBrush2}" HorizontalAlignment="Center"/>
-                        <Border Padding="8,4" Margin="0,4,0,0" Background="{Binding Status, Converter={StaticResource StatusToBrush}}">
-                            <TextBlock Text="{Binding Status, FallbackValue=n/a}" FontSize="14" FontWeight="SemiBold" Foreground="White" HorizontalAlignment="Center"/>
-                        </Border>
+                        <Viewbox Height="24" Margin="0,6,0,0">
+                            <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+                            </Border>
+                        </Viewbox>
                     </StackPanel>
                 </StackPanel>
             </DockPanel>
@@ -120,13 +162,27 @@
                                 IsReadOnly="True"
                                 SelectionUnit="FullRow"
                                 AutoGenerateColumns="False"
-                                RowHeight="22">
+                                RowHeight="24">
 
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="Index" Width="0.4*" Binding="{Binding Path=Index}" />
                             <DataGridTextColumn Header="Description" Width="0.7*" Binding="{Binding Path=Description}" />
-                            <DataGridTextColumn Header="Start value" Width="0.4*" Binding="{Binding Path=StartValue}" />
-                            <DataGridTextColumn Header="End value" Width="0.4*" Binding="{Binding Path=EndValue}" />
+                            <DataGridTemplateColumn Header="Start value" Width="0.4*">
+                                <DataGridTemplateColumn.CellTemplateSelector>
+                                    <templateSelectors:DataGridStartValuesTemplateSelector
+                                        StartValueIntegerTemplate="{StaticResource StartValueIntegerTemplate}"
+                                        StartValueUnsignedIntegerTemplate="{StaticResource StartValueUnsignedIntegerTemplate}"
+                                        StartValueDecimalTemplate="{StaticResource StartValueDecimalTemplate}"/>
+                                </DataGridTemplateColumn.CellTemplateSelector>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="End value" Width="0.4*">
+                                <DataGridTemplateColumn.CellTemplateSelector>
+                                    <templateSelectors:DataGridEndValuesTemplateSelector
+                                        EndValueIntegerTemplate="{StaticResource EndValueIntegerTemplate}"
+                                        EndValueUnsignedIntegerTemplate="{StaticResource EndValueUnsignedIntegerTemplate}"
+                                        EndValueDecimalTemplate="{StaticResource EndValueDecimalTemplate}"/>
+                                </DataGridTemplateColumn.CellTemplateSelector>
+                            </DataGridTemplateColumn>
                         </DataGrid.Columns>
                     </DataGrid>
                 </DockPanel>
