--- a/TradeHubGui/Views/BruteOptimizationWindow.xaml
+++ b/TradeHubGui/Views/BruteOptimizationWindow.xaml
@@ -2,9 +2,11 @@
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=WPFToolkit.Extended"
                 xmlns:conv="clr-namespace:TradeHubGui.Converters"
                 xmlns:views="clr-namespace:TradeHubGui.Views"
-                 xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+                xmlns:templateSelectors="clr-namespace:TradeHubGui.TemplateSelectors"
                 GlowBrush="Silver"
                 ShowInTaskbar="True"
                 WindowStartupLocation="CenterScreen"
@@ -23,12 +25,53 @@
     
     <mah:MetroWindow.Resources>
         <conv:OptimizationExecutionStatusToBrushConverter x:Key="StatusToBrush"/>
+        
+        <DataTemplate x:Key="EndValueIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EndValueUnsignedIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" Minimum="0" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="EndValueDecimalTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding EndValue}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="IncrementIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding Increment}" FormatString="N0" Increment="1"/>
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="IncrementUnsignedIntegerTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:IntegerUpDown Value="{Binding Increment}" FormatString="N0" Increment="1" Minimum="0" />
+            </Border>
+        </DataTemplate>
+
+        <DataTemplate x:Key="IncrementDecimalTemplate">
+            <Border Background="#8FFF">
+                <wpfToolkitExtended:DecimalUpDown Value="{Binding Increment}" FormatString="N0" Increment="1" />
+            </Border>
+        </DataTemplate>
+
+        <templateSelectors:DataGridEndValuesTemplateSelector x:Key="ParameterDetailsTemplateSelector"/>
+
     </mah:MetroWindow.Resources>
+    
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Closing">
             <i:InvokeCommandAction  Command="{Binding CloseBruteOptimizationWindowCommand}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -85,9 +128,8 @@
 							SelectionUnit="FullRow"
 							AutoGenerateColumns="False"
 							RowHeight="22">
-
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Parameter" Width="0.7*" Binding="{Binding Path=Description}" />
+                        <DataGridTextColumn Header="Parameter" Width="0.7*" Binding="{Binding Path=Description}" IsReadOnly="True"/>
                         <DataGridTextColumn Header="Value" Width="0.5*" Binding="{Binding Path=ParameterValue}" />
                         <DataGridTextColumn Header="End value" Width="0.6*" Binding="{Binding Path=EndValue}" />
                         <DataGridTextColumn Header="Increment" Width="0.7*" Binding="{Binding Path=Increment}" />
