--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -276,17 +276,17 @@
                               RowHeight="22">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Order ID" Width="0.3*" Binding="{Binding Path=ID}" />
-                            <DataGridTextColumn Header="Side" Width="0.2*" Binding="{Binding Path=Side}" />
-                            <DataGridTextColumn Header="Type" Width="0.2*" Binding="{Binding Path=Type}" />
-                            <DataGridTextColumn Header="Price" Width="0.3*" Binding="{Binding Path=Price}" />
-                            <DataGridTextColumn Header="Quantity" Width="0.3*" Binding="{Binding Path=Quantity}" />
-                            <DataGridTextColumn Header="Time" Width="0.5*" Binding="{Binding Path=Time}" />
+                            <DataGridTextColumn Header="Order ID" Width="0.22*" Binding="{Binding Path=ID}" />
+                            <DataGridTextColumn Header="Side" Width="0.15*" Binding="{Binding Path=Side}" />
+                            <DataGridTextColumn Header="Type" Width="0.15*" Binding="{Binding Path=Type}" />
+                            <DataGridTextColumn Header="Price" Width="0.2*" Binding="{Binding Path=Price}" />
+                            <DataGridTextColumn Header="Quantity" Width="0.22*" Binding="{Binding Path=Quantity}" />
+                            <DataGridTextColumn Header="Time" Width="0.4*" Binding="{Binding Path=Time}" />
                             <DataGridTemplateColumn Header="Status" Width="0.4*" SortMemberPath="Status">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Border Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" VerticalAlignment="Center">
-                                            <TextBlock Text="{Binding Status}" Foreground="White" FontWeight="SemiBold" Margin="4,2" HorizontalAlignment="Center"/>
+                                        <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                            <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
                                         </Border>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
